# serialize

./: .gitignore  CMakeLists.txt  README.md  detail.inl  out_test.hpp  run.sh  test.cpp  test2.cpp
example/: Message.cpp  Message.hpp  Settings.cpp  Settings.hpp  main.cpp
serialize/: detail.inl  in.hpp  out.hpp
